white space fix

--- a/assets/stylesheets/application.styl
+++ b/assets/stylesheets/application.styl
@@ -85,6 +85,7 @@ path
   color: white
   margin-top: 150px
   opacity: 0.7
+  white-space: nowrap
 
 .shift
   &.left
